<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignStart="@+id/button13"
        android:id="@+id/button14"
        android:background="@android:color/holo_red_dark"
        android:layout_alignRight="@+id/button13"
        android:layout_alignEnd="@+id/button13"
        android:textStyle="normal|bold"
        android:textColor="#ffffff" />

    <Button
        android:text="@string/droite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button12"
        android:layout_alignBaseline="@+id/button11"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:background="@android:color/holo_red_dark"
        android:textStyle="normal|bold"
        android:textColor="#ffffff" />

    <Button
        android:text="@string/gauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="31dp"
        android:id="@+id/button11"
        android:layout_alignTop="@+id/button14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_red_dark"
        android:textStyle="normal|bold"
        android:textColor="#ffffff" />

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button13"
        android:layout_below="@+id/button14"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10"
        android:background="@android:color/holo_red_dark"
        android:textStyle="normal|bold"
        android:textColor="#ffffff" />

    <Button
        android:text="@string/avancer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/button11"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffff"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/reculer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/button10"
        android:layout_below="@+id/button13"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:background="@android:color/holo_red_dark"
        android:textStyle="normal|bold"
        android:textColor="#ffffff" />

    <Button
        android:text="@string/graphe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button15" />

    <Button
        android:text="@string/accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button15"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10"
        android:id="@+id/button16" />

    <Button
        android:text="@string/donn_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button16"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button17" />
</RelativeLayout>